--- a/style.css
+++ b/style.css
@@ -27,4 +27,11 @@ body {
   border: 1px solid #ccc;
   box-sizing: border-box;
   background: white;
+  transition: all 0.15s;
+}
+
+.div_grid:hover {
+  border: 0.9px solid #ddd;
+  background: hsl(212, 50%, 85%);
+  height: 20.2px;
 }
