--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root {
+  --resolution: 320px;
+  --color: rgb(255,255,255);
+  --size: 20px;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -16,14 +22,16 @@ body {
 #container {
   display: flex;
   flex-wrap: wrap;
-  width: 320px;
-  height: 320px;
+  width: 524px;
+  height: 524px;
+  border: 1px solid black;
+  overflow: hidden;
 
 }
 
 .div_grid {
-  flex: 0 0 20px;
-  height: 20px;
+  flex: 0 0 calc(524px / 16);
+  height: calc(524px /16);
   border: 1px solid #ccc;
   box-sizing: border-box;
   transition: all 0.15s;
