--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./style.css">
-	<title>Document</title>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+	<title>Etch a Sketch</title>
 </head>
 <body>
 	<main>
@@ -28,6 +28,6 @@
 		</div>
 	  </section>
 	</main>
-	<script src="main.js"></script>
+	<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
